add --with-db to include SQLAlchemy

--- a/lair/templates/{module-name}_endpoints_main.py.j2
+++ b/lair/templates/{module-name}_endpoints_main.py.j2
@@ -1,4 +1,7 @@
 from flask import Blueprint, jsonify
+{% if with_db %}from {{module_name}}.database import db
+from {{module_name}}.models.example import Example{% endif %}
+
 
 main = Blueprint('main', __name__)
 
@@ -12,5 +15,9 @@ def index():
             "valid_endpoint": true
         }
     """
+{% if with_db %}
+    return jsonify([str(e) for e in db.session.query(Example)])
+{% else %}
     return jsonify({'valid_endpoint': True})
+{% endif %}
 
