new structure (utilize flask.cli) phase one

--- a/lair/templates/setup.py.j2
+++ b/lair/templates/setup.py.j2
@@ -15,5 +15,5 @@ setup(name='{{ module_name }}',
       install_requires=requirements(),
       entry_points="""
       [console_scripts]
-      {{ project_name }} = {{ module_name }}.run:main
+      {{ project_name }} = {{ module_name }}.run:cli
       """)
