--- a/lair/templates/{module-name}_settings.ini.j2
+++ b/lair/templates/{module-name}_settings.ini.j2
@@ -1,2 +1,5 @@
 [flask]
-DEBUG = true
+{% if with_db %}
+SQLALCHEMY_DATABASE_URI = sqlite:////tmp/{{ module_name }}.db
+SQLALCHEMY_TRACK_MODIFICATIONS = true
+{% endif %}
