--- a/lair/templates/MANIFEST.in.j2
+++ b/lair/templates/MANIFEST.in.j2
@@ -1,5 +1,6 @@
 include requirements.txt
 include README.rst
 recursive-include {{ module_name }} *.ini
+recursive-include migrations *.py *.mako *.ini
 recursive-include docs *.rst *.png *.svg *.css *.html conf.py
 prune docs/build/*
