--- a/lair/templates/{module-name}_app.py.j2
+++ b/lair/templates/{module-name}_app.py.j2
@@ -1,8 +1,8 @@
 import os
 from flask import Flask
 from konfig import Config
-from flask_migrate import Migrate
-{% if with_db %}from {{module_name}}.database import db{% endif %}
+{% if with_db %}from flask_migrate import Migrate
+from {{module_name}}.database import db{% endif %}
 from {{ module_name }}.endpoints import blueprints
 
 
@@ -13,14 +13,12 @@ def create():
     app = Flask(__name__)
     app.config_file = Config(settings)
     app.config.update(app.config_file.get_map('flask'))
-
+{% if with_db %}
     db.init_app(app)
     db.app = app
 
-{% if with_db %}
     Migrate(app, db)
 {% endif %}
-
     @app.shell_context_processor
     def make_shell_context():
         context = {
@@ -35,7 +33,6 @@ def create():
             if isinstance(cls, type) and issubclass(cls, db.Model):
                 context['models'][cls.__name__] = cls
 {% endif %}
-
         return dict(**context)
 
     for blueprint in blueprints:
